tests/errors/references/nested_const_struct_assign_mut_ref.duck
struct A {
    s: String,
} impl {
}

struct B {
    a: &mut A,
} impl {
}

fn main() {
    const b = B { a: &mut A { s: "text" } };
    b.a.s = "replaced";
}
